# ingestion_framework

automation_utility/: pyproject.toml
automation_utility/src/: setup.py
automation_utility/src/edap_automation/data_type_mapper/: base_data_type_mapper.py  data_type_mapper_factory.py  oracle_data_type_mapper.py  sql_server_data_type_mapper.py
automation_utility/src/edap_automation/inputs/: oracle_schema.json
automation_utility/src/edap_automation/output/: EMPLOYEES.sql  EMPLOYEES.yaml
automation_utility/src/edap_automation/schema_extractor/: oracle_schema_extractor.py  oracle_schema_extractor_using_cx_oracle.py  schema_extractor_factory.py  sql_server_schema_extractor.py
automation_utility/src/edap_automation/templates/: ddl.sql.j2
automation_utility/src/edap_automation/utils/: generate_ddl_and_config_from_json.py
automation_utility/src/edp_automation/data_type_mapper/: data_type_mapper_factory.py  oracle_data_type_mapper.py  sql_server_data_type_mapper.py
automation_utility/src/edp_automation/schema_extractor/: base_schema_extractor.py  oracle_schema_extractor.py  oracle_schema_extractor_pyodbc.py  oracle_schema_extractor_using_cx_oracle.py  schema_extractor_factory.py  sql_server_schema_extractor.py
automation_utility/src/edp_automation/utils/: generate_artifacts.py  generate_artifacts_from_schema.py  generate_ddl_and_config_from_json_old.py  generate_ddl_and_config_from_schema.py  generate_schema_file_from_source.py  trial.py
automation_utility/tests/: conftest.py  test_data_type_mapper.py  test_generate_artifacts_from_schema.py  test_generate_schema_file_from_source.py  test_main_script.py  test_oracle_schema_extractor.py  test_schema_extractor.py  test_schema_extractor_factory.py  test_sql_server_schema_extractor.py
ingestion_utility/: pyproject.toml
ingestion_utility/tests/: test_base_ingest.py  test_base_ingest_ref.py  test_collate_columns_to_add.py  test_csv_ingest.py  test_csv_ingest_old.py  test_csv_parquet_ingest.py  test_delta_ingest.py  test_delta_ingest_extended.py  test_factory.py  test_sql_batch_ingest.py  test_sql_ingest.py  test_sql_ingest_with_sqlgot.py  test_write_to_quarantine.py  test_write_to_table.py
ingestion_utility/tests/fixtures/: conftest.py  mock_logger.py
tests/: test_base_ingest.py
(+78 files in other folders)
