[project]
name = "edap_ingest"
version = "1.0.0"
description = "Ingestion Utility for Python"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["DataAnd AnalyticsPlatform", "edap", "edp", "ingest", "ingestion", "util", "ingestion_util"]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov"
]

[tools.pytest.ini_options]
testpaths = ["tests"]
pythonpath = "src"
addopts = "-v -ra -q"
log_cli = true
log_cli_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
filterwarnings = "ignore"

# Specify a custom directory for pytest cache
cache_dir = ".pytest_cache"

[tool.coverage.run]
omit = [
    "tests/*"
]

[tool.coverage.report]
skip_empty = true # Prevents empty files (e.g. __init__.py) from appearing in coverage report